1.6.4.1

Minor bugfix release.
UI - Some small translation changes
RPC - Add an HDIndex flag to 'listaccounts' RPC output, useful for debugging HD wallet issues.
CORE - Speed up address allocation when -keypool is set to a larger than default size.

1.6.4

CMDFLAG - Add new command line flag '-coinbasesignature' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)
CMDFLAG - Add new command line flag '-accountpool' to increase the default account look ahead size. (Needed in some cases to find accounts on rescan when large account gaps are present)
UI - Add a special warning if the users wallet.dat is readonly (instead of displaying a generic/scary 'corrupted wallet' message)
UI - Improvements to send dialog, improve handling when user tries to send amounts equal too or larger than available balance.
UI - New menu item for importing private keys.
UI - New menu item to allow users to easily rescan without having to use command line flags or mess around in RPC console.
UI - Improve the way rescan (and other actions that require progress) display in the program.
UI - Fix a bug where transaction screen would sometimes show transactions for all accounts instead of just the active one.
RPC - Modify createaccount command so that it can also create legacy accounts.
RPC - New commands for read only (watch) HD accounts. getreadonlyaccount, importreadonlyaccount.
RPC - New command for read only (watch) HD seeds, getreadonlyseed.
RPC - New 'deleteaccount' command
RPC - Modify 'move' command so that it can handle `-1` as input for the amount field, passing '-1' will calculate the available balance in the account for the confirmation level passed and transfer all of it.
RPC - Merge a bug fix from user 'mezrin' for 'dumpwallet' command.
RPC - Fix a bug in command 'gettransaction' where transaction would not show if 'rpconlylistsecuredtransactions' flag was set to false.
CORE/RPC/UI - Support for read only (watch) HD accounts.