@@ -1,3 +1,7 @@
+x.x.x
+
+RPC - Add a type parameter to importseed RPC command.
+
 1.6.4.1
 
 Minor bugfix release.
